--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,6 +2,20 @@ name: Regression Pipeline
 
 on:
   workflow_dispatch:
+    inputs:
+      browser:
+        description: 'Choose Browser:'
+        required: true
+        default: 'Chrome'
+        type: choice
+        options:
+          - 'Chrome'
+          - 'Edge'
+      threads:
+        description: 'Choose Number of Threads: (1-4)'
+        required: true
+        default: 2
+        type: number
 
 jobs:
   build:
@@ -17,4 +31,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Run Regression Suite
-      run: mvn clean install -Dbrowser=Chrome -Dthreads=2 -Dcicd=true
+      run: mvn clean install -Dbrowser=${{ github.event.inputs.browser }} -Dthreads=${{ github.event.inputs.threads }} -Dcicd=true
