am facut al 3lea pipeline

--- a/.github/workflows/nightlyPipeline.yml
+++ b/.github/workflows/nightlyPipeline.yml
@@ -19,4 +19,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Run Regression Suite
-      run: mvn clean install -Dbrowser=Chrome -Dthreads=3 -Dcicd=true
+      run: mvn clean install -Dbrowser=Chrome -Dthreads=3 -Dcicd=true -Dgroups=@Regression
